feat: Enhance USDT contract with improved documentation, add test scripts, and update deployment configuration. Introduced a test script in `test/USDT.js`, modified `package.json` for testing, and refined contract comments for clarity.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "tronbox migrate --network development --reset && tronbox exec test/USDT.exec.js --network development"
+  },
   "dependencies": {
     "@openzeppelin/test-helpers": "^0.5.16",
     "dotenv": "^17.2.1"
